# rust-travel-advisor-Public

./: Cargo.toml
test_annotations/: Cargo.toml
test_annotations/src/: lib.rs
test_annotations/src/derivates/: greeter.rs  mod.rs
travel_advisor/: Cargo.toml  config.json  config.yml  id_rsa  id_rsa.pub
travel_advisor/migrations/2022-09-17-061200_create_tables/: down.sql  up.sql
travel_advisor/migrations/2023-01-11-105805_add_timestamps/: down.sql  up.sql
travel_advisor/migrations/2023-01-12-203210_add_routes/: down.sql  up.sql
travel_advisor/setup/: v0001.sql
travel_advisor/src/: config.rs  main.rs  schema.rs
travel_advisor/src/api/: airport.rs  city.rs  comment.rs  dtos.rs  hello.rs  mod.rs  responses.rs  routes.rs  users.rs  validations.rs
travel_advisor/src/middleware/: jwt_extractor.rs  mod.rs  request_id.rs
travel_advisor/src/model/: airport.rs  airports.rs  airports_test.rs  best_route.rs  city.rs  comment.rs  common.rs  mod.rs  route.rs  user.rs
travel_advisor/src/playground/: macros.rs  mod.rs  my_tests.rs  usage.rs  wrapper.rs
travel_advisor/src/services/: airport_service.rs  auth.rs  city_service.rs  comment_service.rs  comment_service_test.rs  macros.rs  mod.rs  route_service.rs  traits.rs
travel_advisor/src/storage/: airport.rs  city.rs  comment.rs  db_context.rs  entities.rs  mod.rs  route.rs  user.rs
travel_advisor/src/util/: errors.rs  errors_test.rs  errors_v2.rs  mod.rs
