[package]
name = "travel_advisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
actix-web = "4.2.1"
# actix-multipart = "0.4.0"
diesel = { version = "2.1.0", default-features = false, features = ["mysql", "r2d2", "chrono", "uuid"] }
# dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-rustls", "chrono"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
digest = "0.10.6"
md5 = "0.7.0"
csv = "1.1.6"
actix-jwt-auth-middleware = "0.3.0"
fast_log = "1.5.54"
async-trait = "0.1.68"
log = "0.4.18"
mockall = "0.11.4"
actix-rt = "2.8.0"
test_annotations = { path = "../test_annotations" }
uuid = { version = "1.6.1", features = ["v4"] }
r2d2 = "0.8.10"
chrono = "0.4.31"
derive_more = "0.99.17"
futures-util = "0.3.29"
